@@ -1,5 +1,9 @@
 package org.zalando.nakadi.controller;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,22 +13,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
-import org.zalando.nakadi.domain.EventType;
+import org.zalando.nakadi.domain.PartitionStatistics;
+import org.zalando.nakadi.domain.Timeline;
 import org.zalando.nakadi.exceptions.NakadiException;
 import org.zalando.nakadi.exceptions.NoSuchEventTypeException;
-import org.zalando.nakadi.repository.EventTypeRepository;
-import org.zalando.nakadi.repository.TopicRepository;
 import org.zalando.nakadi.service.CursorConverter;
 import org.zalando.nakadi.service.timeline.TimelineService;
 import org.zalando.nakadi.view.TopicPartition;
 import org.zalando.problem.Problem;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static javax.ws.rs.core.Response.Status.INTERNAL_SERVER_ERROR;
 import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static org.springframework.http.ResponseEntity.ok;
 import static org.zalando.problem.spring.web.advice.Responses.create;
@@ -34,15 +30,12 @@ public class PartitionsController {
 
     private static final Logger LOG = LoggerFactory.getLogger(PartitionsController.class);
 
-    private final EventTypeRepository eventTypeRepository;
     private final TimelineService timelineService;
     private final CursorConverter cursorConverter;
 
     @Autowired
-    public PartitionsController(final EventTypeRepository eventTypeRepository,
-                                final TimelineService timelineService,
+    public PartitionsController(final TimelineService timelineService,
                                 final CursorConverter cursorConverter) {
-        this.eventTypeRepository = eventTypeRepository;
         this.timelineService = timelineService;
         this.cursorConverter = cursorConverter;
     }
@@ -52,23 +45,27 @@ public class PartitionsController {
                                             final NativeWebRequest request) {
         LOG.trace("Get partitions endpoint for event-type '{}' is called", eventTypeName);
         try {
-            final EventType eventType = eventTypeRepository.findByName(eventTypeName);
-            final TopicRepository topicRepository = timelineService.getTopicRepository(eventType);
-            if (!topicRepository.topicExists(eventType.getTopic())) {
-                return create(Problem.valueOf(INTERNAL_SERVER_ERROR, "topic is absent in kafka"), request);
+            final List<Timeline> timelines = timelineService.getActiveTimelinesOrdered(eventTypeName);
+            final List<PartitionStatistics> firstStats = timelineService.getTopicRepository(timelines.get(0))
+                    .loadTopicStatistics(Collections.singletonList(timelines.get(0)));
+            final List<PartitionStatistics> lastStats;
+            if (timelines.size() == 1) {
+                lastStats = firstStats;
             } else {
-                final List<TopicPartition> result = topicRepository
-                        .loadTopicStatistics(Collections.singletonList(eventType.getTopic())).stream()
-                        .map(stat -> new TopicPartition(
-                                eventType.getName(),
-                                stat.getPartition(),
-                                // FIXME TIMELINE: IT HAS TO BE FIXED TO SUPPORT MULTIPLE TL
-                                // Cursors here might be in different timeline
-                                cursorConverter.convert(stat.getFirst()).getOffset(),
-                                cursorConverter.convert(stat.getLast()).getOffset()))
-                        .collect(Collectors.toList());
-                return ok().body(result);
+                lastStats = timelineService.getTopicRepository(timelines.get(timelines.size() - 1))
+                        .loadTopicStatistics(Collections.singletonList(timelines.get(timelines.size() - 1)));
             }
+            final List<TopicPartition> result = firstStats.stream().map(first -> {
+                final PartitionStatistics last = lastStats.stream()
+                        .filter(l -> l.getPartition().equals(first.getPartition()))
+                        .findAny().get();
+                return new TopicPartition(
+                        eventTypeName,
+                        first.getPartition(),
+                        cursorConverter.convert(first.getFirst()).getOffset(),
+                        cursorConverter.convert(last.getLast()).getOffset());
+            }).collect(Collectors.toList());
+            return ok().body(result);
         } catch (final NoSuchEventTypeException e) {
             return create(Problem.valueOf(NOT_FOUND, "topic not found"), request);
         } catch (final NakadiException e) {
@@ -83,25 +80,25 @@ public class PartitionsController {
                                           final NativeWebRequest request) {
         LOG.trace("Get partition endpoint for event-type '{}', partition '{}' is called", eventTypeName, partition);
         try {
-            final EventType eventType = eventTypeRepository.findByName(eventTypeName);
-            final String topic = eventType.getTopic();
-
-            final TopicRepository topicRepository = timelineService.getTopicRepository(eventType);
-            if (!topicRepository.topicExists(topic)) {
-                return create(Problem.valueOf(INTERNAL_SERVER_ERROR, "topic is absent in kafka"), request);
-            } else {
-                final Optional<TopicPartition> result = topicRepository.loadPartitionStatistics(topic, partition)
-                        .map(tp -> new TopicPartition(
-                                eventType.getName(),
-                                tp.getPartition(),
-                                cursorConverter.convert(tp.getFirst()).getOffset(),
-                                cursorConverter.convert(tp.getLast()).getOffset()));
-
-                if (!result.isPresent()) {
-                    return create(Problem.valueOf(NOT_FOUND, "partition not found"), request);
-                }
-                return ok().body(result.get());
+            final List<Timeline> timelines = timelineService.getActiveTimelinesOrdered(eventTypeName);
+            final Optional<PartitionStatistics> firstStats = timelineService.getTopicRepository(timelines.get(0))
+                    .loadPartitionStatistics(timelines.get(0), partition);
+            if (!firstStats.isPresent()) {
+                return create(Problem.valueOf(NOT_FOUND, "partition not found"), request);
             }
+            final PartitionStatistics lastStats;
+            if (timelines.size() == 1) {
+                lastStats = firstStats.get();
+            } else  {
+                lastStats = timelineService.getTopicRepository(timelines.get(timelines.size() - 1))
+                        .loadPartitionStatistics(timelines.get(timelines.size() - 1), partition).get();
+            }
+            final TopicPartition result = new TopicPartition(
+                    eventTypeName,
+                    lastStats.getPartition(),
+                    cursorConverter.convert(firstStats.get().getFirst()).getOffset(),
+                    cursorConverter.convert(lastStats.getLast()).getOffset());
+            return ok().body(result);
         } catch (final NoSuchEventTypeException e) {
             return create(Problem.valueOf(NOT_FOUND, "topic not found"), request);
         } catch (final NakadiException e) {
